# Vision-based-Dynamic-Obstacle-Detection-and-Tracking-for-Mobile-Robots

./: README.md
clearpath/: robot.srdf  robot.srdf.xacro  robot.urdf.xacro  robot.yaml  setup.bash
clearpath/manipulators/config/: moveit.yaml
clearpath/platform/config/: control.yaml  imu_filter.yaml  localization.yaml  teleop_interactive_markers.yaml  teleop_joy.yaml  twist_mux.yaml
clearpath/platform/launch/: platform-service.launch.py
clearpath/sensors/config/: camera_0.yaml  imu_0.yaml  lidar2d_0.yaml
clearpath/sensors/launch/: camera_0.launch.py  imu_0.launch.py  lidar2d_0.launch.py  sensors-service.launch.py
clearpath_ws/src/clearpath_common/clearpath_config/: CHANGELOG.rst  package.xml  setup.py
clearpath_ws/src/clearpath_common/clearpath_config/clearpath_config/common/types/: platform.py
clearpath_ws/src/clearpath_common/clearpath_config/clearpath_config/platform/: can.py  platform.py
clearpath_ws/src/clearpath_common/clearpath_config/clearpath_config/sample/sensors/: ouster_os1.yaml
clearpath_ws/src/clearpath_common/clearpath_generator_common/: CMakeLists.txt  package.xml
clearpath_ws/src/clearpath_common/clearpath_generator_common/clearpath_generator_common/param/: platform.py
clearpath_ws/src/clearpath_desktop/clearpath_viz/launch/: view_model.launch.py  view_moveit.launch.py  view_navigation.launch.py  view_robot.launch.py
clearpath_ws/src/clearpath_desktop/clearpath_viz/rviz/: robot.rviz
clearpath_ws/src/clearpath_robot/: dependencies.repos
clearpath_ws/src/clearpath_robot/.github/workflows/: ci.yml
clearpath_ws/src/clearpath_robot/clearpath_sensors/: CHANGELOG.rst  package.xml
clearpath_ws/src/clearpath_robot/clearpath_sensors/config/: axis_camera.yaml  flir_blackfly.yaml  imu_filter.yaml  inventus_bmu.yaml  velodyne_lidar.yaml
clearpath_ws/src/clearpath_robot/clearpath_sensors/launch/: axis_camera.launch.py  flir_blackfly.launch.py  image_rectify.launch.py  imu_filter.launch.py  inventus_bmu.launch.py  luxonis_oakd.launch.py  phidgets_spatial.launch.py  swiftnav_duro.launch.py  velodyne_lidar.launch.py
clearpath_ws/src/clearpath_simulator/clearpath_gz/launch/: simulation.launch.py
clearpath_ws/src/fusion_tf/: l2i.rviz  package.xml  setup.cfg  setup.py
clearpath_ws/src/fusion_tf/fusion_tf/: fusion.py  fusion_method1.py  scan_to_cloud.py  z_inspector.py
clearpath_ws/src/my_robot_launch/: package.xml  setup.py
clearpath_ws/src/my_robot_launch/launch/: load_robot_description.launch.py
clearpath_ws/src/navigation/: CMakeLists.txt  package.xml
clearpath_ws/src/navigation/config/a200/: localization.yaml  nav2.yaml
clearpath_ws/src/navigation/launch/: localization.launch.py  nav2.launch.py  slam.launch.py
clearpath_ws/src/navigation/maps/: map_test.pgm  map_test.yaml
clearpath_ws/src/people_costmap_layer/: CMakeLists.txt  package.xml  social_layer.xml
clearpath_ws/src/people_costmap_layer/include/people_costmap_layer/: social_layer.hpp
clearpath_ws/src/people_costmap_layer/src/: social_layer.cpp
clearpath_ws/src/project_bringup/: CMakeLists.txt  package.xml
clearpath_ws/src/project_bringup/launch/: extra_bringup.launch.py
clearpath_ws/src/project_description/: CMakeLists.txt  package.xml
clearpath_ws/src/project_description/meshes/: rplidar.stl
clearpath_ws/src/project_description/urdf/: rplidar_husky.urdf.xacro
clearpath_ws/src/ros2_camera_lidar_fusion/: setup.py
clearpath_ws/src/ros2_camera_lidar_fusion/config/: general_configuration.yaml
clearpath_ws/src/ros2_camera_lidar_fusion/ros2_camera_lidar_fusion/: extrinsic_tf.py  get_extrinsic_camera_calibration.py  lidar_camera_projection.py  projection_fusion.py  verify_transformation.py
clearpath_ws/src/vision_tracking_pose/: package.xml  setup.cfg  setup.py
clearpath_ws/src/vision_tracking_pose/vision_tracking_pose/: botsort.yaml  bytetrack.yaml  dete_track_sim.py  detec_track_hard.py  detection.py  distance.py  pose_estimation_depth.py  test.py  tracking_results_botsort.csv  tracking_results_bytetrack.csv  tracking_velocity.py  visualization.py
clearpath_ws/src/vision_tracking_pose_msgs/: CMakeLists.txt  package.xml
clearpath_ws/src/vision_tracking_pose_msgs/msg/: BoundingBox2D.msg  DetectedPerson.msg  Detection.msg  DetectionArray.msg  KeyPoint2D.msg  KeyPoint2DArray.msg  KeyPoint3D.msg  KeyPoint3DArray.msg  Pose2D.msg  TrackedPeople.msg
