<?xml version="1.0"?>
<package format="3">
  <name>fusion_tf</name>
  <version>0.1.0</version>
  <description>Fusion package only in Python.</description>
  <maintainer email="hiba.naffati@insat.ucar.tn">Hiba Neffati</maintainer>
  <license>MIT</license>
  <!-- Build tools -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>yolo_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
