<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_tracking_pose</name>
  <version>0.0.1</version>
  <description>YOLO for ROS 2</description>
  <maintainer email="hiba.naffati@insat.ucar.tn">Hiba Neffati</maintainer>
  <license>MIT</license>

  <!-- Build and runtime dependencies -->
  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_tracking_pose_msgs</depend>

  <!-- Dependencies for launch files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

