<?xml version="1.0"?>
<package format="3">
  <name>vision_tracking_pose_msgs</name>
  <version>0.0.0</version>
  <description>YOLO message definitions</description>

  <maintainer email="hiba.naffati@insat.ucar.tn">Hiba Neffati</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
</package>
